--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
             <p><br></p>
             <ui>
                 <p><b>Used technologies: </b>Java 15, Spring Boot, Maven, H2 database, Flyway, Hibernate, Thymeleaf, SpringSecurity, Lombok, JavaScript</p>
-                <p><b>Description: </b>Web application for orders and contractor management (adding, deleting, editing orders and contractors, generating order in pdf)</p>
+                <p><b>Description: </b>Web application for orders and car management (adding, deleting, editing orders and contractors, generating reservation in pdf)</p>
                 <p><b>Sources: </b><a href="https://github.com/lukaszse/contractors">github.com/lukaszse/contractors</a></p>
                 <i class="fab fa-github"></i>
             </ui>
