--- a/src/main/resources/templates/add_car.html
+++ b/src/main/resources/templates/add_car.html
@@ -17,7 +17,7 @@
               <div class="col-md-8">
 
 
-                  <form th:action="@{add_contractor}" th:object="${contractor}" method="post">
+                  <form th:action="@{add_contractor}" th:object="${car}" method="post">
                       <p>&nbsp;</p>
                       <H5 th:if="*{id != null}" align="center">Edit Contractor:</H5>
 
