--- a/src/main/resources/templates/reservations.th.xml
+++ b/src/main/resources/templates/reservations.th.xml
@@ -7,15 +7,15 @@
           th:href="${addOrder}"
           th:with="addOrder=${T(org.lukaszse.contractorsapp.util.Mappings).ADD_RESERVATION}"/>
     <attr sel="#deleteOrder"
-          th:href="${deleteOrder}+'?id='+${order.id}"
+          th:href="${deleteOrder}+'?id='+${reservation.id}"
           th:with="deleteOrder=${T(org.lukaszse.contractorsapp.util.Mappings).DELETE_RESERVATION}"/>
     <attr sel="#editOrder"
-          th:href="${editOrder}+'?id='+${order.id}"
+          th:href="${editOrder}+'?id='+${reservation.id}"
           th:with="editOrder=${T(org.lukaszse.contractorsapp.util.Mappings).EDIT_RESERVATION}"/>
     <attr sel="#home"
           th:href="${home}"
           th:with="home=${T(org.lukaszse.contractorsapp.util.Mappings).HOME}"/>
     <attr sel="#viewOrder"
-          th:href="${viewOrder}+'?id='+${order.id}"
+          th:href="${viewOrder}+'?id='+${reservation.id}"
           th:with="viewOrder=${T(org.lukaszse.contractorsapp.util.Mappings).VIEW_ORDER}"/>
 </thlogic>
