--- a/src/main/resources/templates/car.xml
+++ b/src/main/resources/templates/car.xml
@@ -5,23 +5,23 @@
           th:replace="~{fragments/footer :: footerFragment}"/>
     <attr sel="#contractorId"
           th:href="${viewContractor}+'?id='+${car.id}"
-          th:with="viewContractor=${T(org.lukaszse.contractorsapp.util.Mappings).CAR}"
+          th:with="viewContractor=${T(org.lukaszse.carRental.util.Mappings).CAR}"
     />
     <attr sel="#addContractorId"
           th:href="${addContractor}"
-          th:with="addContractor=${T(org.lukaszse.contractorsapp.util.Mappings).ADD_CAR}"
+          th:with="addContractor=${T(org.lukaszse.carRental.util.Mappings).ADD_CAR}"
     />
     <attr sel="#deleteContractorId"
           th:href="${deleteContractor}+'?id='+${car.id}"
-          th:with="deleteContractor=${T(org.lukaszse.contractorsapp.util.Mappings).DELETE_CAR}"
+          th:with="deleteContractor=${T(org.lukaszse.carRental.util.Mappings).DELETE_CAR}"
     />
     <attr sel="#editContractorId"
           th:href="${editContractor}+'?id='+${car.id}"
-          th:with="editContractor=${T(org.lukaszse.contractorsapp.util.Mappings).EDIT_CAR}"
+          th:with="editContractor=${T(org.lukaszse.carRental.util.Mappings).EDIT_CAR}"
     />
-          th:href="@{__${T(org.lukaszse.contractorsapp.util.Mappings).EDIT_CONTRACTOR}__+'?id='+${car.id}}"/>
+          th:href="@{__${T(org.lukaszse.carRental.util.Mappings).EDIT_CONTRACTOR}__+'?id='+${car.id}}"/>
     <attr sel="#home"
           th:href="${home}"
-          th:with="home=${T(org.lukaszse.contractorsapp.util.Mappings).HOME}"
+          th:with="home=${T(org.lukaszse.carRental.util.Mappings).HOME}"
     />
 </thlogic>
