--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -19,17 +19,17 @@
                             <li class="nav-item">
                                 <a class="nav-link"
                                    th:href="${home}"
-                                   th:with="home=${T(org.lukaszse.contractorsapp.util.Mappings).HOME}">Home </a>
+                                   th:with="home=${T(org.lukaszse.carRental.util.Mappings).HOME}">Home </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link"
                                    th:href="${cars}"
-                                   th:with="cars=${T(org.lukaszse.contractorsapp.util.Mappings).CARS}">Cars</a>
+                                   th:with="cars=${T(org.lukaszse.carRental.util.Mappings).CARS}">Cars</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link"
                                    th:href="${reservations}"
-                                   th:with="reservations=${T(org.lukaszse.contractorsapp.util.Mappings).RESERVATIONS}">Reservations</a>
+                                   th:with="reservations=${T(org.lukaszse.carRental.util.Mappings).RESERVATIONS}">Reservations</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -44,7 +44,7 @@
                             <li class="nav-item">
                                 <a class="nav-link"
                                    th:href="${logout}"
-                                   th:with="logout=${T(org.lukaszse.contractorsapp.util.Mappings).LOGOUT}">Logout</a>
+                                   th:with="logout=${T(org.lukaszse.carRental.util.Mappings).LOGOUT}">Logout</a>
                             </li>
                         </ul>
                     </div>
