--- a/src/main/resources/templates/add_car.th.xml
+++ b/src/main/resources/templates/add_car.th.xml
@@ -5,8 +5,8 @@
           th:replace="~{fragments/footer :: footerFragment}"/>
     <attr sel="#home"
           th:href="${home}"
-          th:with="home=${T(org.lukaszse.contractorsapp.util.Mappings).HOME}"/>
+          th:with="home=${T(org.lukaszse.carRental.util.Mappings).HOME}"/>
     <attr sel="#contractorListId"
           th:href="${contractorList}"
-          th:with="contractorList=${T(org.lukaszse.contractorsapp.util.Mappings).CARS}"/>
+          th:with="contractorList=${T(org.lukaszse.carRental.util.Mappings).CARS}"/>
 </thlogic>
