--- a/src/main/resources/templates/add_reservation.th.xml
+++ b/src/main/resources/templates/add_reservation.th.xml
@@ -5,8 +5,8 @@
           th:replace="~{fragments/footer :: footerFragment}"/>
     <attr sel="#home"
           th:href="${home}"
-          th:with="home=${T(org.lukaszse.contractorsapp.util.Mappings).HOME}"/>
+          th:with="home=${T(org.lukaszse.carRental.util.Mappings).HOME}"/>
     <attr sel="#orderListId"
           th:href="${orderList}"
-          th:with="orderList=${T(org.lukaszse.contractorsapp.util.Mappings).RESERVATIONS}"/>
+          th:with="orderList=${T(org.lukaszse.carRental.util.Mappings).RESERVATIONS}"/>
 </thlogic>
