--- a/src/main/resources/templates/user_administration.th.xml
+++ b/src/main/resources/templates/user_administration.th.xml
@@ -5,14 +5,14 @@
           th:replace="~{fragments/footer :: footerFragment}"/>
     <attr sel="#addNewUser"
           th:href="${addUser}"
-          th:with="addUser=${T(org.lukaszse.contractorsapp.util.Mappings).ADD_USER}"/>
+          th:with="addUser=${T(org.lukaszse.carRental.util.Mappings).ADD_USER}"/>
     <attr sel="#deleteUser"
           th:href="${deleteUser}+'?userName='+${user.userName}"
-          th:with="deleteUser=${T(org.lukaszse.contractorsapp.util.Mappings).DELETE_USER}"/>
+          th:with="deleteUser=${T(org.lukaszse.carRental.util.Mappings).DELETE_USER}"/>
     <attr sel="#editUser"
           th:href="${editUser}+'?userName='+${user.userName}"
-          th:with="editUser=${T(org.lukaszse.contractorsapp.util.Mappings).EDIT_USER}"/>
+          th:with="editUser=${T(org.lukaszse.carRental.util.Mappings).EDIT_USER}"/>
     <attr sel="#home"
           th:href="${home}"
-          th:with="home=${T(org.lukaszse.contractorsapp.util.Mappings).HOME}"/>
+          th:with="home=${T(org.lukaszse.carRental.util.Mappings).HOME}"/>
 </thlogic>
