--- a/src/main/resources/templates/add_car.th.xml
+++ b/src/main/resources/templates/add_car.th.xml
@@ -8,5 +8,5 @@
           th:with="home=${T(org.lukaszse.carRental.util.Mappings).HOME}"/>
     <attr sel="#contractorListId"
           th:href="${contractorList}"
-          th:with="contractorList=${T(org.lukaszse.carRental.util.Mappings).CARS}"/>
+          th:with="contractorList=${T(org.lukaszse.carRental.util.Mappings).MANAGEMENT_CARS}"/>
 </thlogic>
