--- a/src/main/resources/templates/car.html
+++ b/src/main/resources/templates/car.html
@@ -6,7 +6,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title> == Contractors ==</title>
+    <title> == Cars ==</title>
 
     <script type="text/javascript" th:src="@{/js/lib/jspdf.min.inc.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/jspdf.plugin.autotable.js}"></script>
@@ -30,23 +30,24 @@
     <table id="table" class="table table-striped table-dark" border="2" cellpadding="10">
             <tr>
                 <th>Id</th>
-                <th>Contractor Name</th>
-                <th>Phone number</th>
-                <th>Adress</th>
+                <th>Manufacturer</th>
+                <th>Model</th>
+                <th>Details</th>
             </tr>
             <tr>
                 <td th:text="${car.id}" />
-                <td th:text="${car.name}" />
-                <td th:text="${car.phone}"/>
+                <td th:text="${car.manufacturer}" />
+                <td th:text="${car.model}"/>
                 <td>
-                        <p th:text="${car.street}+' '+${car.property}"/>
-                        <p th:text="${car.post}+' '+${car.city}"/>
-                        <p th:text="${car.country}"/>
+                    <p><strong>Fuel Type: </strong><span th:text="${car.fuelType}"/></p>
+                    <p><strong>Passengers capacity: </strong><span th:text="${car.passengerNumber}"/> </p>
+                    <p><strong>Cost per day: </strong><span th:text="${#numbers.formatDecimal(car.costPerDay, 0, 'COMMA', 2, 'POINT')}"/> PLN</p>
+                    <p><strong>Description: </strong><br><span th:text="${car.description}"/> </p>
                 </td>
             </tr>
     </table>
-    <a id="editContractorId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Edit</a>
-    <a id="deleteContractorId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Delete</a>
+    <a id="editCarId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Edit</a>
+    <a id="deleteCarId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Delete</a>
     <a href="javascript:genPDF()" class="btn btn-light btn-sm" role="button" aria-pressed="true">Generate PDF</a>
 </div>
 
