--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -5,57 +5,191 @@
     <title>Contractor</title>
 </head>
 <body class="p-3 mb-2 bg-dark text-white">
+
 <div th:replace="~{fragments/menu :: menuFragment}"/>
+
 <div class="container-md" align="center">
     <p>&nbsp;</p>
-    <h5>Contractor list:</h5>
+    <h5>Available cars:</h5>
     <p>&nbsp;</p>
     <table class="table table-striped table-dark" border="2" cellpadding="10">
-        <tbody>
-
+        <thead>
         <tr>
             <th scope="col">Id</th>
             <th scope="col">Manufacturer</th>
             <th scope="col">Model</th>
-            <th scope="col">Passengers capacity</th>
-            <th scope="col">Fuel</th>
-            <th scope="col">Cost per day PLN</th>
+            <th scope="col">Period</th>
+            <th scope="col">Cost per day</th>
             <th scope="col"></th>
             <th scope="col"></th>
             <th scope="col"></th>
         </tr>
-
-    <h1 th:each="car : ${car_page}">
         <tr>
-            <td th:text="${car.id}"/>
-            <td th:text="${car.manufacturer}" />
-            <td th:text="${car.model}" />
-            <td th:text="${car.passengerNumber}"/>
-            <td th:text="${car.fuelType}"/>
-            <td th:text="${#numbers.formatDecimal(car.costPerDay, 0, 'COMMA', 2, 'POINT')}"/>
-            <td align="center"><a id="contractorId" class="btn btn-light btn-sm" role="button" aria-pressed="true">View Details</a></td>
-            <td align="center"><a id="editContractorId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Edit</a></td>
-            <td align="center"><a id="deleteContractorId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Delete</a></td>
+            <td>Filters:</td>
+            <td><input id="manufacturerFilter" type="text" name="manufacturer" value=""></td>
+            <td><input id="modelFilter" type="text" name="model" value=""></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
-    </h1>
+        </thead>
+        <tbody id="tbody">
         </tbody>
     </table>
-
     <nav aria-label="...">
-        <ul class="pagination pagination-sm">
-            <li class="page-item" th:each="pageNumber : ${page_numbers}" th:classappend="${pageNumber==car_page.number + 1} ? active">
-                <a class="page-link" th:href="@{/cars(pageSize=${car_page.size}, pageNumber=${pageNumber})}" th:text="${pageNumber}"></a>
-            </li>
+        <ul id="page-links" class="pagination pagination-sm">
         </ul>
     </nav>
 
-    <a id="addContractorId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Add New Car</a>
+    <a id="addCarId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Add New Car</a>
 </div>
-
 <div align="center">
     <footer id="footerId">this is a footer</footer>
 </div>
 
-</body>
+<script>
+    let modelFilter = document.getElementById("modelFilter");
+    let manufacturerFilter = document.getElementById("manufacturerFilter");
 
+
+    window.onload = function () {
+        loadDoc();
+    }
+    modelFilter.addEventListener("keyup", function (event) {
+        if(event.key === 'Enter') {
+            event.preventDefault();
+            filter()
+        }
+    });
+``
+    manufacturerFilter.addEventListener("keyup", function (event) {
+        if(event.key === 'Enter') {
+            event.preventDefault();
+            filter()
+        }
+    });
+
+    function filter() {
+        const manufacturer = manufacturerFilter.value;
+        const model = modelFilter.value;
+        loadDoc(manufacturer, model)
+    }
+
+    function loadDoc(manufacturer, model, pageNumber) {
+
+        if (manufacturer == null) {
+            manufacturer = "";
+        }
+        if (model == null) {
+            model = "";
+        }
+
+        if (pageNumber == null) {
+            pageNumber = 1;
+        }
+
+        get(`/cars/findCars?manufacturer=${manufacturer}&model=${model}&pageNumber=${pageNumber}`, function (err, response) {
+            if (err != null) {
+                console.error(err);
+            } else {
+                buildTable(response.content);
+                pageLinks(response, pageNumber);
+            }
+        });
+    }
+
+    function buildTable(array) {
+        let tbody = document.createElement("tbody");
+        tbody.id = "tbody";
+
+        for (const element of array) {
+            var row = document.createElement("tr");
+            addTextCell(element.id, row);
+            addTextCell(element.manufacturer, row);
+            addTextCell(element.model, row);
+            addTextCell("", row);
+            addTextCell(currencyFormatPLN(element.costPerDay), row);
+            addLinkCell('View Details', `car?id=${element.id}`, row);
+            addLinkCell('Edit', `edit_car?id=${element.id}`, row);
+            addLinkCell('Delete', `delete_car?id=${element.id}`, row);
+            tbody.appendChild(row);
+        }
+        document.getElementById("tbody").replaceWith(tbody);
+    }
+
+    function addTextCell(cellContent, row) {
+        let cell = document.createElement("td");
+        cell.appendChild(document.createTextNode(cellContent));
+        row.appendChild(cell);
+    }
+
+    function addLinkCell(buttonName, link, row) {
+        let cell = document.createElement("td");
+        cell.setAttribute("align", "center")
+        let a = document.createElement("a");
+        a.appendChild(document.createTextNode(buttonName))
+        a.title = buttonName
+        a.href = link
+        a.className = "btn btn-light btn-sm";
+        a.setAttribute("class", "btn btn-light btn-sm")
+        a.setAttribute("role", "button")
+        a.setAttribute("aria-pressed", "true")
+        cell.appendChild(a);
+        row.appendChild(cell);
+        return row;
+    }
+
+    function pageLinks(data, pageNumber) {
+
+        let pageLinks = document.createElement("ul");
+        pageLinks.id = "page-links";
+        pageLinks.className = "pagination pagination-sm";
+
+        for (let i = 1; i <= data.totalPages; i++) {
+            let li = document.createElement("li");
+            if(i === pageNumber) {
+                li.className = "page-item active";
+            } else {
+                li.className = "page-item";
+            }
+            let a = document.createElement("a");
+            a.appendChild(document.createTextNode(i))
+            a.className = "page-link";
+            a.onclick = function () {
+                loadDoc(manufacturerFilter.value, modelFilter.value, i)
+            }
+            a.title = i
+            li.appendChild(a);
+            pageLinks.appendChild(li);
+        }
+        document.getElementById("page-links").replaceWith(pageLinks);
+    }
+
+    function get(url, callback) {
+        var xhr = new XMLHttpRequest();
+        xhr.open('GET', url, true);
+        xhr.responseType = 'json';
+        xhr.onload = function () {
+            var status = xhr.status;
+            if (status === 200) {
+                callback(null, xhr.response);
+            } else {
+                callback(status, xhr.response);
+            }
+        };
+        xhr.send();
+    }
+
+    function currencyFormatPLN(num) {
+        return (
+            num
+                .toFixed(2) // always two decimal digits
+                .replace('.', ',') // replace decimal point character with ,
+                .replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1.') + ' PLN'
+        )
+    }
+</script>
+</body>
 </html>
