--- a/src/main/resources/templates/add_car.html
+++ b/src/main/resources/templates/add_car.html
@@ -42,9 +42,9 @@
                     </div>
 
                     <div class="form-group row">
-                        <label for="inputmanufacturer" class="col-sm-2 col-form-label">Manufacturer</label>
+                        <label for="inputManufacturer" class="col-sm-2 col-form-label">Manufacturer</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputmanufacturer" th:field="*{manufacturer}"
+                            <input type="text" class="form-control" id="inputManufacturer" th:field="*{manufacturer}"
                                    th:errorclass="'form-control is-invalid'">
                         </div>
                     </div>
