--- a/src/main/resources/templates/car.html
+++ b/src/main/resources/templates/car.html
@@ -25,7 +25,7 @@
 
 <div id="reservation" class="container-md" align="center">
 
-    <h5>Details about car:</h5>
+    <h5>Car details:</h5>
     <p><br></p>
     <table id="table" class="table table-striped table-dark" border="2" cellpadding="10">
             <tr>
