--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title> == Contractors ==</title>
 
     <script type="text/javascript" th:src="@{/js/lib/jspdf.min.inc.js}"></script>
@@ -15,11 +16,12 @@
             var doc = new jsPDF();
             var principal = document.querySelector('#principal');
             var car = document.querySelector('#car');
-            doc.fromHTML(principal, 15,15)
-            doc.fromHTML(car, 110,70)
+            doc.fromHTML(principal, 15, 15)
+            doc.fromHTML(car, 110, 70)
             doc.autoTable({
                 startY: 130,
-                html: '#table' })
+                html: '#table'
+            })
             doc.save('Test.pdf');
         }
     </script>
@@ -29,55 +31,30 @@
 
 <div class="container-md" align="center">
     <p>&nbsp;</p>
-    <H5>View Order</H5>
+    <H5>Reservation detail:</H5>
     <p>&nbsp;</p>
     <div id="principal" align="left">
-        <p>Principal:</p>
-        <h3 th:utext="${settingsSet.companyName}">FIRMA PRZYKLADOWA S.A.</h3>
-        <p th:utext="${settingsSet.street}
-                +' '+${settingsSet.property}
-                +'<br \>'+${settingsSet.post}
-                +' '+${settingsSet.city}
-                +'<br \>'+${settingsSet.country}">ulica<br \>Miasto<br \>Kraj</p>
-
-        <h4 th:text="'Order no: '+${reservation.id}">Order number</h4>
+        <p>Purchaser:</p>
+        <h3 th:utext="${reservation.user.getFirstName()} + ' ' + ${reservation.user.getLastName()}">Error. Purchaser not fetched.</h3>
+        <p><br></p>
+        <h4 th:text="'Reservation no: '+${reservation.id}">Reservation no: could not fetched</h4>
     </div>
 
-    <div class="container">
-        <div class="row">
-
-            <div class="col-md-6">
-            </div>
-
-            <div class="col-md-4" align="left">
-                    <p>Contractor:</p>
-                    <h3 th:text="${reservation.car.name}">Contractor Name</h3>
-                    <p th:utext="${reservation.car.name}+' '+${reservation.car.property}
-                    +'<br \>'+${reservation.car.post}+' '+${reservation.car.city}
-                    +'<br \>'+${reservation.car.country}">ulica<br \>Miasto<br \>Kraj</p>
-            </div>
-
-            <div class="col-md-1">
-            </div>
-
-        </div>
-    </div>
 
     <table id="table" class="table table-striped table-dark" border="2" cellpadding="10">
-            <tr>
-                <th>Order Date</th>
-                <th>Price [PLN]</th>
-                <th>Order Name</th>
-                <th>Order Description</th>
-            </tr>
-        <h1>
-            <tr>
-                <td th:text="${reservation.orderDate}" />
-                <td th:text="${reservation.price}" />
-                <td th:text="${reservation.orderName}" />
-                <td th:text="${reservation.orderDescription}"/>
-            </tr>
-        </h1>
+        <tr>
+            <th>Reservation Date</th>
+            <th>Car</th>
+            <th>Rent period</th>
+            <th>Total Cost</th>
+        </tr>
+        <tr>
+            <td th:text="${reservation.reservationDate}"/>
+            <td th:utext="${reservation.car.manufacturer} + ' ' + ${reservation.car.model}"/>
+            <td th:utext="'from: ' + ${reservation.dateFrom} + '<br>'
+                + 'to: ' + ${reservation.dateTo}"/>
+            <td th:text="${reservation.totalCost}"/>
+        </tr>
     </table>
 
     <a id="editOrderId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Edit</a>
