--- a/src/main/resources/templates/reservations.html
+++ b/src/main/resources/templates/reservations.html
@@ -6,26 +6,32 @@
 </head>
 <body class="p-3 mb-2 bg-dark text-white">
 
-<div th:replace="~{fragments/menu :: menuFragment}"/>
+<div th:replace="~{fragments/menu :: menuFragment}"></div>
 
 <div class="container-md" align="center">
     <p>&nbsp;</p>
-    <h5>Order list:</h5>
+    <h5>Reservation list:</h5>
     <p>&nbsp;</p>
     <table class="table table-striped table-dark" border="2" cellpadding="10">
         <thead>
         <tr>
             <th scope="col">Id</th>
-            <th scope="col">Contractor Name</th>
-            <th scope="col">Order Name</th>
+            <th scope="col">User Name</th>
+            <th scope="col">Car</th>
+            <th scope="col">Date from</th>
+            <th scope="col">Date to</th>
+            <th scope="col">Total cost</th>
             <th></th>
             <th></th>
             <th></th>
         </tr>
         <tr>
             <td>Filters:</td>
-            <td><input id="contractorFilter" type="text" name="car" value=""></td>
-            <td><input id="orderNameFilter" type="text" name="orderName" value=""></td>
+            <td><input id="userNameFilter" type="text" name="userName" value=""></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -38,51 +44,41 @@
         <ul id="page-links" class="pagination pagination-sm">
         </ul>
     </nav>
-
-    <a id="addNewOrder" class="btn btn-light btn-sm" role="button" aria-pressed="true">Add Order</a>
 </div>
 <div align="center">
     <footer id="footerId">this is a footer</footer>
 </div>
 
 <script>
-    let orderNameFilter = document.getElementById("orderNameFilter");
-    let contractorFilter = document.getElementById("contractorFilter");
-
+    let userNameFilter = document.getElementById("userNameFilter");
 
     window.onload = function () {
         loadDoc();
     }
-    orderNameFilter.addEventListener("keyup", function (event) {
-        event.preventDefault();
-        filter()
-    });
 
-    contractorFilter.addEventListener("keyup", function (event) {
-        event.preventDefault();
-        filter()
+    userNameFilter.addEventListener("keyup", function (event) {
+        if (event.key === 'Enter') {
+            event.preventDefault();
+            filter()
+        }
     });
 
     function filter() {
-        const orderName = orderNameFilter.value;
-        const car = contractorFilter.value;
-        loadDoc(orderName, car)
+        const userName = userNameFilter.value;
+        loadDoc(userName)
     }
 
-    function loadDoc(orderName, car, pageNumber) {
+    function loadDoc(userName, pageNumber) {
 
-        if (orderName == null) {
-            orderName = "";
-        }
-        if (car == null) {
-            car = "";
+        if (userName == null) {
+            userName = "";
         }
 
         if (pageNumber == null) {
             pageNumber = 1;
         }
 
-        get(`/reservations/findReservations?orderName=${orderName}&contractor=${car}&pageNumber=${pageNumber}`, function (err, response) {
+        get(`/reservations/findReservations?userName=${userName}&pageNumber=${pageNumber}`, function (err, response) {
             if (err != null) {
                 console.error(err);
             } else {
@@ -100,11 +96,14 @@
         for (const element of array) {
             var row = document.createElement("tr");
             addTextCell(element.id, row);
-            addTextCell(element.car.name, row);
-            addTextCell(element.orderName, row);
-            addLinkCell('View Details', `view_order?id=${element.id}`, row);
-            addLinkCell('Edit', `edit_order?id=${element.id}`, row);
-            addLinkCell('Delete', `delete_order?id=${element.id}`, row);
+            addTextCell(element.user.userName, row);
+            addTextCell(`${element.car.manufacturer} ${element.car.model}`, row);
+            addTextCell(element.dateFrom, row);
+            addTextCell(element.dateTo, row);
+            addTextCell(currencyFormatPLN(element.totalCost), row);
+            addLinkCell('View Details', `reservation?id=${element.id}`, row);
+            addLinkCell('Edit', `edit_reservation?id=${element.id}`, row);
+            addLinkCell('Delete', `delete_reservation?id=${element.id}`, row);
             tbody.appendChild(row);
         }
         document.getElementById("tbody").replaceWith(tbody);
@@ -140,7 +139,7 @@
 
         for (let i = 1; i <= data.totalPages; i++) {
             let li = document.createElement("li");
-            if(i === pageNumber) {
+            if (i === pageNumber) {
                 li.className = "page-item active";
             } else {
                 li.className = "page-item";
@@ -149,7 +148,7 @@
             a.appendChild(document.createTextNode(i))
             a.className = "page-link";
             a.onclick = function () {
-                loadDoc(orderNameFilter.value, contractorFilter.value, i)
+                loadDoc(userNameFilter.value, i)
             }
             a.title = i
             li.appendChild(a);
@@ -172,6 +171,15 @@
             }
         };
         xhr.send();
+    }
+
+    function currencyFormatPLN(num) {
+        return (
+            num
+                .toFixed(2) // always two decimal digits
+                .replace('.', ',') // replace decimal point character with ,
+                .replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1.') + ' PLN'
+        )
     }
 </script>
 </body>
