--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -24,7 +24,7 @@
                             <li class="nav-item">
                                 <a class="nav-link"
                                    th:href="${cars}"
-                                   th:with="cars=${T(org.lukaszse.carRental.util.Mappings).MANAGEMENT_CARS}">Cars</a>
+                                   th:with="cars=${T(org.lukaszse.carRental.util.Mappings).CARS}">Cars</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link"
