--- a/src/main/resources/templates/add_reservation.html
+++ b/src/main/resources/templates/add_reservation.html
@@ -14,7 +14,7 @@
         <div class="col-md-8">
             <div>
 
-                <form th:action="@{edit_reservation}" th:object="${reservation}" method="post">
+                <form th:action="@{add_reservation}" th:object="${reservation}" method="post">
 
                     <p>&nbsp;</p>
                     <H5 th:if="*{id != null}" align="center">Edit reservation:</H5>
@@ -23,7 +23,7 @@
 
                     <div align="center" class="alert alert-danger" role="alert" th:if="${#fields.hasErrors('all')}">
                         <h5>Error. Wrong data format:</h5>
-                        <i th:errors="*{all}">Incorrect date</i>
+                        <i th:errors="*{all}">Incorrect data</i>
                     </div>
                     <p>&nbsp<br></p>
 
@@ -35,36 +35,33 @@
                     </div>
 
                     <div class="form-group row">
-                        <label for="selectUser" class="col-sm-2 col-form-label">User</label>
+                        <label for="inputUserName" class="col-sm-2 col-form-label">User</label>
                         <div class="col-sm-10">
-                            <select id="selectUser" class="form-control" th:field="*{userName}"
-                                    th:errorclass="'form-control is-invalid'">
-                                <option th:each="user : ${users}"
-                                        th:value="${user.userName}"
-                                        th:text="${user.userName}">
-                                </option>
-                            </select>
+                            <input type="text" class="form-control" id="inputUserName" th:field="*{userName}"
+                                   th:errorclass="'form-control is-invalid'">
                         </div>
                     </div>
 
+                    <div class="form-group row">
+                        <label for="inputManufacturer" class="col-sm-2 col-form-label">Manufacturer</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputManufacturer" th:field="*{car.manufacturer}"
+                                   th:errorclass="'form-control is-invalid'">
+                        </div>
+                    </div>
 
                     <div class="form-group row">
-                        <label for="selectCar" class="col-sm-2 col-form-label">Car</label>
+                        <label for="inputModel" class="col-sm-2 col-form-label">Model</label>
                         <div class="col-sm-10">
-                            <select id="selectCar" class="form-control" th:field="*{carId}"
-                                    th:errorclass="'form-control is-invalid'">
-                                <option th:each="car : ${cars}"
-                                        th:value="${car.id}"
-                                        th:text="${car.model}">
-                                </option>
-                            </select>
+                            <input type="text" class="form-control" id="inputModel" th:field="*{car.model}"
+                                   th:errorclass="'form-control is-invalid'">
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label for="inputDateFrom" class="col-sm-2 col-form-label">Date From</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control bg-secondary" placeholder="Disabled input" id="inputDateFrom" th:field="*{dateFrom}"
+                            <input type="text" class="form-control bg-secondary" id="inputDateFrom" th:field="*{dateFrom}"
                                    th:errorclass="'form-control is-invalid'" readonly>
                         </div>
                     </div>
@@ -72,7 +69,7 @@
                     <div class="form-group row">
                         <label for="inputDateFrom" class="col-sm-2 col-form-label">Date From</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control bg-secondary" placeholder="Disabled input" id="inputDateTo" th:field="*{dateTo}"
+                            <input type="text" class="form-control bg-secondary" id="inputDateTo" th:field="*{dateTo}"
                                    th:errorclass="'form-control is-invalid'" readonly>
                         </div>
                     </div>
@@ -81,14 +78,6 @@
                         <label for="inputTotalCost" class="col-sm-2 col-form-label">Total cost [PLN]</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="inputTotalCost" th:field="*{totalCost}"
-                                   th:errorclass="'form-control is-invalid'">
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <label for="inputRented" class="col-sm-2 col-form-label">Rented</label>
-                        <div class="col-sm-10">
-                            <input type="checkbox" class="form-check-input position-static" id="inputRented" th:field="*{rented}"
                                    th:errorclass="'form-control is-invalid'">
                         </div>
                     </div>
