--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -13,7 +13,8 @@
     <h5 class="text-center">Available cars:</h5>
     <p>&nbsp;</p>
 
-    <h6 class="text-left">Date from: <input id="dateFromFilter" type="date" name="dateFrom" value="">  Date to: <input id="dateToFilter" type="date" name="dateTo" value=""></h6>
+    <h6 class="text-left">Date from: <input id="dateFromFilter" type="date" name="dateFrom" value=""> Date to: <input
+            id="dateToFilter" type="date" name="dateTo" value=""></h6>
     <table class="table table-striped table-dark" border="2" cellpadding="2">
         <thead>
         <tr>
@@ -24,11 +25,13 @@
             <th scope="col"></th>
             <th scope="col"></th>
             <th scope="col"></th>
+            <th scope="col"></th>
         </tr>
         <tr>
             <td>Filters:</td>
             <td><input id="manufacturerFilter" type="text" name="manufacturer" value=""></td>
             <td><input id="modelFilter" type="text" name="model" value=""></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -43,7 +46,8 @@
         </ul>
     </nav>
 
-    <div class="col text-center"><a id="addCarId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Add New Car</a></div>
+    <div class="col text-center"><a id="addCarId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Add New
+        Car</a></div>
 
 </div>
 <div align="center">
@@ -60,14 +64,14 @@
         loadDoc();
     }
     modelFilter.addEventListener("keyup", function (event) {
-        if(event.key === 'Enter') {
+        if (event.key === 'Enter') {
             event.preventDefault();
             filter();
         }
     });
-``
+    ``
     manufacturerFilter.addEventListener("keyup", function (event) {
-        if(event.key === 'Enter') {
+        if (event.key === 'Enter') {
             event.preventDefault();
             filter();
         }
@@ -128,12 +132,21 @@
             addTextCell(element.manufacturer, row);
             addTextCell(element.model, row);
             addTextCell(currencyFormatPLN(element.costPerDay), row);
+            addBookButton(element.id, dateFromFilter.value, dateToFilter.value, "userName", row)
             addLinkCell('View Details', `car?id=${element.id}`, row);
             addLinkCell('Edit', `edit_car?id=${element.id}`, row);
             addLinkCell('Delete', `delete_car?id=${element.id}`, row);
             tbody.appendChild(row);
         }
         document.getElementById("tbody").replaceWith(tbody);
+    }
+
+    function addBookButton(carId, dateFrom, dateTo, userName, row) {
+        if (dateFrom !== "" || dateTo !== "") {
+            addLinkCell('Book', `add_reservation?userName=${userName}&carId=${carId}&dateFrom=${dateFrom}&dateTo=${dateTo}`, row)
+        } else {
+            addButtonCell('Book', 'Select rental period first!', row)
+        }
     }
 
     function addTextCell(cellContent, row) {
@@ -158,6 +171,22 @@
         return row;
     }
 
+    function addButtonCell(buttonName, alertMessage, row) {
+        let cell = document.createElement("td");
+        cell.setAttribute("align", "center")
+        let button = document.createElement("button");
+        button.appendChild(document.createTextNode(buttonName))
+        button.onclick = function () {
+            alert(alertMessage)
+        }
+        button.title = buttonName
+        button.className = "btn btn-light btn-sm";
+        button.setAttribute("class", "btn btn-light btn-sm")
+        cell.appendChild(button);
+        row.appendChild(cell);
+        return row;
+    }
+
     function pageLinks(data, pageNumber) {
 
         let pageLinks = document.createElement("ul");
@@ -166,7 +195,7 @@
 
         for (let i = 1; i <= data.totalPages; i++) {
             let li = document.createElement("li");
-            if(i === pageNumber) {
+            if (i === pageNumber) {
                 li.className = "page-item active";
             } else {
                 li.className = "page-item";
