--- a/src/main/resources/templates/car.html
+++ b/src/main/resources/templates/car.html
@@ -1,24 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title> == Cars ==</title>
-
-    <script type="text/javascript" th:src="@{/js/lib/jspdf.min.inc.js}"></script>
-    <script type="text/javascript" th:src="@{/js/lib/jspdf.plugin.autotable.js}"></script>
-    <script type="text/javascript">
-        function genPDF() {
-            var doc = new jsPDF();
-            doc.autoTable({ html: '#table' })
-            doc.save('Test.pdf');
-        }
-    </script>
-
-</head>
+<head id="headId"></head>
 <body class="p-3 mb-2 bg-dark text-white">
 <div th:replace="~{fragments/menu :: menuFragment}"/>
 <p>&nbsp;</p>
@@ -56,5 +38,13 @@
 </div>
 
 </body>
-
+<script type="text/javascript" th:src="@{/js/lib/jspdf.min.inc.js}"></script>
+<script type="text/javascript" th:src="@{/js/lib/jspdf.plugin.autotable.js}"></script>
+<script type="text/javascript">
+    function genPDF() {
+        var doc = new jsPDF();
+        doc.autoTable({ html: '#table' })
+        doc.save('Test.pdf');
+    }
+</script>
 </html>
