--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 <div th:replace="~{fragments/menu :: menuFragment}"/>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<H1 align="center">Contractor Management Application</H1>
+<H1 align="center">Car Rental Application</H1>
 <p><br></p>
 <p align="center">This is demo version.</p>
 <div align="center">
