add add_reservation POST endpoint and support on frontend

--- a/src/main/resources/templates/add_reservation.html
+++ b/src/main/resources/templates/add_reservation.html
@@ -18,7 +18,7 @@
 
                     <p>&nbsp;</p>
                     <H5 th:if="*{id != null}" align="center">Edit reservation:</H5>
-                    <H5 th:if="*{id == null}" align="center">Add reservation:</H5>
+                    <H5 th:if="*{id == null}" align="center">Confirm reservation:</H5>
                     <p>&nbsp;</p>
 
                     <div align="center" class="alert alert-danger" role="alert" th:if="${#fields.hasErrors('all')}">
@@ -38,7 +38,15 @@
                         <label for="inputUserName" class="col-sm-2 col-form-label">User</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="inputUserName" th:field="*{userName}"
-                                   th:errorclass="'form-control is-invalid'">
+                                   th:errorclass="'form-control is-invalid'" readonly>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="inputCarId" class="col-sm-2 col-form-label">Manufacturer</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputCarId" th:field="*{car.id}"
+                                   th:errorclass="'form-control is-invalid'" readonly>
                         </div>
                     </div>
 
@@ -46,7 +54,7 @@
                         <label for="inputManufacturer" class="col-sm-2 col-form-label">Manufacturer</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="inputManufacturer" th:field="*{car.manufacturer}"
-                                   th:errorclass="'form-control is-invalid'">
+                                   th:errorclass="'form-control is-invalid'" readonly>
                         </div>
                     </div>
 
@@ -54,14 +62,6 @@
                         <label for="inputModel" class="col-sm-2 col-form-label">Model</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="inputModel" th:field="*{car.model}"
-                                   th:errorclass="'form-control is-invalid'">
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <label for="inputDateFrom" class="col-sm-2 col-form-label">Date From</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control bg-secondary" id="inputDateFrom" th:field="*{dateFrom}"
                                    th:errorclass="'form-control is-invalid'" readonly>
                         </div>
                     </div>
@@ -69,7 +69,15 @@
                     <div class="form-group row">
                         <label for="inputDateFrom" class="col-sm-2 col-form-label">Date From</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control bg-secondary" id="inputDateTo" th:field="*{dateTo}"
+                            <input type="text" class="form-control" id="inputDateFrom" th:field="*{dateFrom}"
+                                   th:errorclass="'form-control is-invalid'" readonly>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="inputDateFrom" class="col-sm-2 col-form-label">Date From</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputDateTo" th:field="*{dateTo}"
                                    th:errorclass="'form-control is-invalid'" readonly>
                         </div>
                     </div>
@@ -78,13 +86,13 @@
                         <label for="inputTotalCost" class="col-sm-2 col-form-label">Total cost [PLN]</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="inputTotalCost" th:field="*{totalCost}"
-                                   th:errorclass="'form-control is-invalid'">
+                                   th:errorclass="'form-control is-invalid'" readonly>
                         </div>
                     </div>
 
                     <div align="center">
-                        <input type="submit" class="btn btn-light " value="Submit">
-                        <input type="reset" class="btn btn-light" value="Reset">
+                        <input type="submit" class="btn btn-light" value="Submit">
+                        <a href="/cars" class="btn btn-light" role="button" aria-pressed="true">Go Back</a>
                     </div>
 
                 </form>
