fix cars pagination (hibernate bug workaround)

--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -33,7 +33,7 @@
                     <div th:if="${#fields.hasErrors('all')}">
                         <div align="center" class="alert alert-danger" role="alert">
                             <h5>Error. Wrong data format:</h5>
-                            <i th:errors="*{all}">Incorrect date</i>
+                            <i th:errors="*{all}">Incorrect data</i>
                         </div>
                         <p>&nbsp;</p>
                     </div>
