--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -7,9 +7,20 @@
 
 <div class="container-md">
     <p>&nbsp;</p>
+    <div th:if="${success_message != null}">
+        <div class="alert alert-success" role="alert">
+            <H5 align="center" class="text" th:text="${success_message}"></H5>
+        </div>
+    </div>
+    <div th:if="${fail_message != null}">
+        <div class="alert alert-success" role="alert">
+            <H5 align="center" class="text" th:text="${fail_message}"></H5>
+        </div>
+        <p>&nbsp;
+    </div>
+    <p>&nbsp;</p>
     <h5 class="text-center">Available cars:</h5>
     <p>&nbsp;</p>
-
     <h6 class="text-left">Date from: <input id="dateFromFilter" type="date" name="dateFrom" value=""> Date to: <input
             id="dateToFilter" type="date" name="dateTo" value=""></h6>
     <table class="table table-striped table-dark" border="2" cellpadding="2">
