--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,5 +4,10 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>Created by Łukasz Seremak © 2022</p>
+        <!--     Optional JavaScript-->
+        <!--     jQuery first, then Popper.js, then Bootstrap JS-->
+        <script  th:src="@{/js/lib/jquery-3.2.1.slim.min.js}"></script>
+        <script  th:src="@{/js/lib/bootstrap.min.js}"></script>
+        <script  th:src="@{/js/lib/popper.min.js}"></script>
 </footer>
 </html>
