--- a/src/main/resources/templates/add_user.html
+++ b/src/main/resources/templates/add_user.html
@@ -47,6 +47,19 @@
                     </div>
 
                     <div class="form-group row">
+                        <label for="selectCar" class="col-sm-2 col-form-label">Role</label>
+                        <div class="col-sm-10">
+                            <select id="selectCar" class="form-control" th:field="*{userRole}"
+                                    th:errorclass="'form-control is-invalid'">
+                                <option th:each="userRole : ${user_roles}"
+                                        th:value="${userRole}"
+                                        th:text="${userRole}">
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
                         <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
                         <div class="col-sm-10">
                             <input type="password" class="form-control" id="inputPassword" th:field="*{password}" th:errorclass="'form-control is-invalid'">
