--- a/src/main/resources/templates/user_administration.html
+++ b/src/main/resources/templates/user_administration.html
@@ -18,6 +18,7 @@
             <th scope="col">UserName</th>
             <th scope="col">First Name</th>
             <th scope="col">Last Name</th>
+            <th scope="col">Role</th>
             <th></th>
             <th></th>
         </tr>
@@ -27,6 +28,7 @@
                 <td th:text="${user.userName}"/>
                 <td th:text="${user.firstName}"/>
                 <td th:text="${user.lastName}"/>
+                <td th:text="${user.userRole}"/>
 
                 <td align="center"><a id="editUser" class="btn btn-light btn-sm" role="button"
                                       aria-pressed="true">Edit</a></td>
